gcc/testsuite/rust/rustc/ui/parser/missing-enum-or-struct-issue-125446_dg.rs
Whoops {}
// { dg-error "" "" { target *-*-* } .-1 }

